--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:6wvhrPgUQtUpyQTJ7OT4AuU9ya6CLaAgo4KcCVxgY0o=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -20,12 +20,15 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=mysql
+DB_PORT=3306
+DB_DATABASE=medical_db
+DB_USERNAME=sail
+DB_PASSWORD=password
+
+WWWUSER=1000
+WWWGROUP=1000
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
