--- a/.env.example
+++ b/.env.example
@@ -21,7 +21,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=laravel-docker
+DB_HOST=db
 DB_PORT=3306
 DB_DATABASE=medical_db
 DB_USERNAME=sail
